--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">Business Solutions Consultant with experience in Business Development, Operations Management, Digital and Social Media Marketing, Management, Employee Training, and Customer Relations. Combined with my Software Engineering skills, I am able to develop products that are customer oriented and designed to optimize business function and success.</p>
+                    <p class="text-faded">Business Solutions Consultant with experience in Business Development, Operations Management, Digital and Social Media Marketing, Management, Employee Training, and Customer Relations. Combined with my Software Engineering skills, I am able to develop products that are customer oriented and designed to ensure business success.</p>
                 </div>
             </div>
         </div>
