--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
                 <div class="no-gutter popup-gallery">
                   <div class="col-lg-4 col-sm-6">
-                      <a href="img/portfolio/fullsize/kitchenjeanniegif.gif" class="portfolio-box">
+                      <a href="img/portfolio/fullsize/kitchenjeanniegif.gif" class="portfolio-box">Kitchen Jeannie Demo
                         <img src="img/portfolio/fullsize/kitchenjeannie.png" class="img-responsive">
                           <div class="portfolio-box-caption">
                               <div class="portfolio-box-caption-content">
@@ -207,20 +207,20 @@
                               </div>
                           </div>
                       </a>
-                      <a href="img/portfolio/fullsize/ios1.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios2.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios3.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios4.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios5.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios6.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios7.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios9.png" class="portfolio-box"></a>
-                      <a href="img/portfolio/fullsize/ios10.png" class="portfolio-box"></a>
+                      <a href="img/portfolio/fullsize/ios1.png" class="portfolio-box">App main page</a>
+                      <a href="img/portfolio/fullsize/ios2.png" class="portfolio-box">Search recipes by dietary preference</a>
+                      <a href="img/portfolio/fullsize/ios3.png" class="portfolio-box">Filter food intolerances</a>
+                      <a href="img/portfolio/fullsize/ios4.png" class="portfolio-box">Select type of dish</a>
+                      <a href="img/portfolio/fullsize/ios5.png" class="portfolio-box">View ingredients and instructions</a>
+                      <a href="img/portfolio/fullsize/ios6.png" class="portfolio-box">Save recipes</a>
+                      <a href="img/portfolio/fullsize/ios7.png" class="portfolio-box">Your Fridge allows search with ingredients</a>
+                      <a href="img/portfolio/fullsize/ios9.png" class="portfolio-box">Add on hand ingredients</a>
+                      <a href="img/portfolio/fullsize/ios10.png" class="portfolio-box">View recipes from search</a>
                   </div>
                 </div>
                   <div class="no-gutter popup-gallery">
                     <div class="col-lg-4 col-sm-6">
-                        <a href="img/portfolio/fullsize/rufflife1.png" class="portfolio-box" title="Home Page">
+                        <a href="img/portfolio/fullsize/rufflife1.png" class="portfolio-box" title="Home Page with search functionality">
                           <img src="img/portfolio/fullsize/rufflife1.png" class="img-responsive">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
@@ -233,11 +233,11 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="img/portfolio/fullsize/rufflife2.png" class="portfolio-box"></a>
-                        <a href="img/portfolio/fullsize/rufflife3.png" class="portfolio-box"></a>
-                        <a href="img/portfolio/fullsize/rufflife4.png" class="portfolio-box"></a>
-                        <a href="img/portfolio/fullsize/rufflife5.png" class="portfolio-box"></a>
-                        <a href="img/portfolio/fullsize/rufflife6.png" class="portfolio-box"></a>
+                        <a href="img/portfolio/fullsize/rufflife2.png" class="portfolio-box">Search each category by location</a>
+                        <a href="img/portfolio/fullsize/rufflife3.png" class="portfolio-box">Get place details and Ruff Life user reviews, plus save place on profile</a>
+                        <a href="img/portfolio/fullsize/rufflife4.png" class="portfolio-box">Add your own review and view Google user reviews</a>
+                        <a href="img/portfolio/fullsize/rufflife5.png" class="portfolio-box">Profile shows picture from social media and saved palaces</a>
+                        <a href="img/portfolio/fullsize/rufflife6.png" class="portfolio-box">Login using social media through Firebase</a>
                     </div>
                   </div>
       </div>
@@ -248,7 +248,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Want something more official?</h2>
-                <a href="https://drive.google.com/file/d/0B5G97QesC2PIdXhzZGwxcTlWNjQ/view?usp=sharing" class="btn btn-default btn-xl sr-button">Download My Resume</a>
+                <a href="https://drive.google.com/file/d/0B5G97QesC2PIdXhzZGwxcTlWNjQ/view?usp=sharing" class="btn btn-default btn-xl sr-button">View My Resume</a>
             </div>
         </div>
     </aside>
