fixed bug with project descriptions

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
                 <div class="no-gutter popup-gallery">
                   <div class="col-lg-4 col-sm-6">
-                      <a href="img/portfolio/fullsize/kitchenjeanniegif.gif" class="portfolio-box">Kitchen Jeannie Demo
+                      <a href="img/portfolio/fullsize/kitchenjeanniegif.gif" class="portfolio-box" title="Kitchen Jeannie Demo">
                         <img src="img/portfolio/fullsize/kitchenjeannie.png" class="img-responsive">
                           <div class="portfolio-box-caption">
                               <div class="portfolio-box-caption-content">
@@ -207,15 +207,15 @@
                               </div>
                           </div>
                       </a>
-                      <a href="img/portfolio/fullsize/ios1.png" class="portfolio-box">App main page</a>
-                      <a href="img/portfolio/fullsize/ios2.png" class="portfolio-box">Search recipes by dietary preference</a>
-                      <a href="img/portfolio/fullsize/ios3.png" class="portfolio-box">Filter food intolerances</a>
-                      <a href="img/portfolio/fullsize/ios4.png" class="portfolio-box">Select type of dish</a>
-                      <a href="img/portfolio/fullsize/ios5.png" class="portfolio-box">View ingredients and instructions</a>
-                      <a href="img/portfolio/fullsize/ios6.png" class="portfolio-box">Save recipes</a>
-                      <a href="img/portfolio/fullsize/ios7.png" class="portfolio-box">Your Fridge allows search with ingredients</a>
-                      <a href="img/portfolio/fullsize/ios9.png" class="portfolio-box">Add on hand ingredients</a>
-                      <a href="img/portfolio/fullsize/ios10.png" class="portfolio-box">View recipes from search</a>
+                      <a href="img/portfolio/fullsize/ios1.png" class="portfolio-box" title="App main page"></a>
+                      <a href="img/portfolio/fullsize/ios2.png" class="portfolio-box" title="Search recipes by dietary preference"></a>
+                      <a href="img/portfolio/fullsize/ios3.png" class="portfolio-box" title="Filter food intolerances"></a>
+                      <a href="img/portfolio/fullsize/ios4.png" class="portfolio-box" title="Select type of dish"></a>
+                      <a href="img/portfolio/fullsize/ios5.png" class="portfolio-box" title="View ingredients and instructions"></a>
+                      <a href="img/portfolio/fullsize/ios6.png" class="portfolio-box" title="Save recipes"></a>
+                      <a href="img/portfolio/fullsize/ios7.png" class="portfolio-box" title="Your Fridge allows search with ingredients"></a>
+                      <a href="img/portfolio/fullsize/ios9.png" class="portfolio-box" title="Add on hand ingredients"></a>
+                      <a href="img/portfolio/fullsize/ios10.png" class="portfolio-box" title="View recipes from search"></a>
                   </div>
                 </div>
                   <div class="no-gutter popup-gallery">
@@ -233,11 +233,11 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="img/portfolio/fullsize/rufflife2.png" class="portfolio-box">Search each category by location</a>
-                        <a href="img/portfolio/fullsize/rufflife3.png" class="portfolio-box">Get place details and Ruff Life user reviews, plus save place on profile</a>
-                        <a href="img/portfolio/fullsize/rufflife4.png" class="portfolio-box">Add your own review and view Google user reviews</a>
-                        <a href="img/portfolio/fullsize/rufflife5.png" class="portfolio-box">Profile shows picture from social media and saved palaces</a>
-                        <a href="img/portfolio/fullsize/rufflife6.png" class="portfolio-box">Login using social media through Firebase</a>
+                        <a href="img/portfolio/fullsize/rufflife2.png" class="portfolio-box" title="Search each category by location"></a>
+                        <a href="img/portfolio/fullsize/rufflife3.png" class="portfolio-box" title="Get place details and Ruff Life user reviews, plus save place on profile"></a>
+                        <a href="img/portfolio/fullsize/rufflife4.png" class="portfolio-box" title="Add your own review and view Google user reviews"></a>
+                        <a href="img/portfolio/fullsize/rufflife5.png" class="portfolio-box" title="Profile shows picture from social media and saved palaces"></a>
+                        <a href="img/portfolio/fullsize/rufflife6.png" class="portfolio-box" title="Login using social media through Firebase"></a>
                     </div>
                   </div>
       </div>
