--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jeffrey Kwok | Business Solutions Consultant | Full Stack Software Engineer</title>
+    <title>Jeffrey Kwok | Business Solutions Consultant | Full Stack Web Developer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
