--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             </video>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Business Solutions Consultant and Full Stack Software Engineer</h1>
+                <h1 id="homeHeading">Business Solutions Consultant and Full Stack Web Developer</h1>
                 <hr>
-                <p>As a business consultant, I enjoy helping organizations grow and succeed. As an engineer, I continually push myself to develop and explore new skills. It is my ultimate objective to combine the variety of my professional experience, personal interests, and strengths into a role that both challenges and excites me.</p>
+                <p>As a business consultant, I enjoy helping organizations grow and succeed. As an developer, I continually push myself to develop and explore new skills. It is my ultimate objective to combine the variety of my professional experience, personal interests, and strengths into a role that both challenges and excites me.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
         </div>
