--- a/index.html
+++ b/index.html
@@ -163,6 +163,21 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
+              <div class="col-lg-6 col-sm-6">
+                <a href="https://beauundies.com/" class="portfolio-box" target="_blank">
+                  <img src="img/portfolio/fullsize/beauundies.png" class="img-responsive">
+                  <div class="portfolio-box-caption">
+                      <div class="portfolio-box-caption-content">
+                          <div class="project-category text-faded">
+                              PHP
+                          </div>
+                          <div class="project-name">
+                              Beau Undies
+                          </div>
+                      </div>
+                  </div>
+                </a>
+              </div>
               <div class="no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/starcarrentals1.png" class="portfolio-box" title="Home Page with availability search based on date">
@@ -248,7 +263,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Want something more official?</h2>
-                <a href="https://drive.google.com/file/d/0B5G97QesC2PIdXhzZGwxcTlWNjQ/view?usp=sharing" class="btn btn-default btn-xl sr-button">View My Resume</a>
+                <a href="https://drive.google.com/file/d/1TqMugvcdlBykT9OYTUkjvCLLiPTCObhH/view?usp=sharing" class="btn btn-default btn-xl sr-button">View My Resume</a>
             </div>
         </div>
     </aside>
