--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
+              <div class="no-gutter popup-gallery">
               <div class="col-lg-6 col-sm-6">
                 <a href="https://beauundies.com/" class="portfolio-box" target="_blank">
                   <img src="img/portfolio/fullsize/beauundies.png" class="img-responsive">
@@ -177,6 +178,7 @@
                       </div>
                   </div>
                 </a>
+              </div>
               </div>
               <div class="no-gutter popup-gallery">
                 <div class="col-lg-6 col-sm-6">
