--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
               <div class="no-gutter popup-gallery">
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-lg-3 col-md-6 col-sm-6">
                 <a href="https://beauundies.com/" class="portfolio-box" target="_blank">
                   <img src="img/portfolio/fullsize/beauundies.png" class="img-responsive">
                   <div class="portfolio-box-caption">
@@ -181,7 +181,7 @@
               </div>
               </div>
               <div class="no-gutter popup-gallery">
-                <div class="col-lg-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="img/portfolio/fullsize/starcarrentals1.png" class="portfolio-box" title="Home Page with availability search based on date">
                       <img src="img/portfolio/fullsize/starcarrentals1.png" class="img-responsive">
                         <div class="portfolio-box-caption">
@@ -210,7 +210,7 @@
                 </div>
               </div>
                 <div class="no-gutter popup-gallery">
-                  <div class="col-lg-6 col-sm-6">
+                  <div class="col-lg-3 col-md-6 col-sm-6">
                       <a href="img/portfolio/fullsize/kitchenjeanniegif.gif" class="portfolio-box" title="Kitchen Jeannie Demo">
                         <img src="img/portfolio/fullsize/kitchenjeannie.png" class="img-responsive">
                           <div class="portfolio-box-caption">
@@ -236,7 +236,7 @@
                   </div>
                 </div>
                   <div class="no-gutter popup-gallery">
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <a href="img/portfolio/fullsize/rufflife1.png" class="portfolio-box" title="Home Page with search functionality">
                           <img src="img/portfolio/fullsize/rufflife1.png" class="img-responsive">
                             <div class="portfolio-box-caption">
