opening resume in new tab

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Want something more official?</h2>
-                <a href="https://drive.google.com/file/d/1TqMugvcdlBykT9OYTUkjvCLLiPTCObhH/view?usp=sharing" class="btn btn-default btn-xl sr-button">View My Resume</a>
+                <a href="https://drive.google.com/file/d/1TqMugvcdlBykT9OYTUkjvCLLiPTCObhH/view?usp=sharing" target="_blank" class="btn btn-default btn-xl sr-button">View My Resume</a>
             </div>
         </div>
     </aside>
