--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             </video>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Business Solutions Consultant and Full Stack Web Developer</h1>
+                <h1 id="homeHeading">Full Stack Web Developer and Digital Marketing Consultant</h1>
                 <hr>
-                <p>As a business consultant, I enjoy helping organizations grow and succeed. As an developer, I continually push myself to develop and explore new skills. It is my ultimate objective to combine the variety of my professional experience, personal interests, and strengths into a role that both challenges and excites me.</p>
+                <p>As an developer, I continually push myself to develop and explore new skills. As a marketer, I help businesses reach new customers. It is my ultimate objective to combine the variety of my professional experience, personal interests, and strengths into a role that both challenges and excites me.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
-                    <p class="text-faded">Business Solutions Consultant with experience in Business Development, Operations Management, Digital and Social Media Marketing, Management, Employee Training, and Customer Relations. Combined with my Software Engineering skills, I am able to develop products that are customer oriented and designed to optimize business function and success.</p>
+                    <p class="text-faded">Web Developer with experience in Business Development, Operations Management, Digital and Social Media Marketing, Management, Employee Training, and Customer Relations. I am able to develop products that are customer oriented and designed to optimize business function and success.</p>
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Want something more official?</h2>
-                <a href="https://drive.google.com/file/d/19gOcbGgBQDu6WQZoeflEgzJk66605Spn/view?usp=sharing" class="btn btn-default btn-xl sr-button">Download My Resume</a>
+                <a href="https://drive.google.com/file/d/1uZdaYJi_YlE9ESyfUrfSfYq4VY37mgoN/view?usp=sharing" class="btn btn-default btn-xl sr-button">Download My Resume</a>
             </div>
         </div>
     </aside>
